--- a/style.css
+++ b/style.css
@@ -53,6 +53,14 @@ h9{
     font-size: 100px;
     padding: 25px;
 }
+#produtos .text-center{
+    font-size: 100px;
+    padding: 25px;
+}
+#nossoTime .text-center{
+    font-size: 100px;
+    text-align: center;
+}
 iframe{
     text-align: right;
     font-size: 100px;
